add qr code sheets

--- a/styles.css
+++ b/styles.css
@@ -60,3 +60,9 @@ div.field{
 .form-card-info{
     text-align: center;
 }
+
+#qr-forms{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap:4px
+}
